Vis: Added fragment breadcrumbs to sankey diagram and changed tooltip css

--- a/app/fragment-sankey/d3-tip.css
+++ b/app/fragment-sankey/d3-tip.css
@@ -1,8 +1,11 @@
 .d3-tip {
+    line-height: 1;
     font-size: 12px;
-    padding: 4px;
-    background:  #BCC5D0;
-    border-radius: 3px;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 2px;
+    pointer-events: none;
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -10,17 +13,18 @@
     box-sizing: border-box;
     display: inline;
     font-size: 10px;
+    width: 100%;
     line-height: 1;
-    color:  #BCC5D0;
+    color: rgba(0, 0, 0, 0.8);
     position: absolute;
     pointer-events: none;
 }
 
 /* Northward tooltips */
-.d3-tip.ne:after {
+.d3-tip.n:after {
     content: "\25BC";
     margin: -1px 0 0 0;
     top: 100%;
     left: 0;
-    text-align: left;
+    text-align: center;
 }
