--- a/app/app.css
+++ b/app/app.css
@@ -50,3 +50,14 @@
     background-color: #eee;
 }
 
+.lcia-method {
+    font-size: 0.8em;
+}
+
+.lcia-bar-container {
+    height: 350px;
+}
+
+.header text {
+    font-weight: bold;
+}
