--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,7 @@
     line-height: 1;
     font-size: 12px;
     padding: 12px;
+    width: 100px;
     background: rgba(0, 0, 0, 0.8);
     color: #fff;
     border-radius: 2px;
