--- a/app/app.css
+++ b/app/app.css
@@ -79,3 +79,9 @@ waterfall-chart .y.axis path {
     /*display: none; */
     stroke-opacity: 0.2;
 }
+
+.gridStyle {
+    /*border: 1px solid rgb(212,212,212);*/
+    width: 100%;
+    height: 1000px;
+}
