--- a/app/app.css
+++ b/app/app.css
@@ -83,5 +83,6 @@ waterfall-chart .y.axis path {
 .gridStyle {
     /*border: 1px solid rgb(212,212,212);*/
     width: 100%;
-    height: 1000px;
+    /* height to fit not supported, unfortunately */
+    height: 800px;
 }
