Vis: paramGrid - reduce font size and format param value (#166)

--- a/app/app.css
+++ b/app/app.css
@@ -85,6 +85,8 @@ waterfall-chart .y.axis path {
     width: 100%;
     /* height to fit not supported, unfortunately */
     height: 600px;
+
+    font-size: 12px;
 }
 
 
