--- a/app/app.css
+++ b/app/app.css
@@ -80,6 +80,10 @@ waterfall-chart .y.axis path {
     stroke-opacity: 0.2;
 }
 
+.top.axis path {
+    display: none;
+}
+
 .gridStyle {
     /*border: 1px solid rgb(212,212,212);*/
     width: 100%;
