--- a/app/app.css
+++ b/app/app.css
@@ -100,46 +100,29 @@ waterfall-chart .y.axis path {
     line-height: 30px;
 }
 
+.float-block {
+    display: inline-block;
+    margin: 1em;
+}
+
 /* Override multiselect styles */
 /* Make it look like html select */
 .multiSelect > button {
-    display: inline-block;
-    position: relative;
-    text-align: center;
-    cursor: pointer;
-    border: 1px solid #c6c6c6;
     padding: 1px 1px 1px 1px;
-    font-size: 14px;
     min-height : 20px !important;
     border-radius: 0px;
     color: #333;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-    white-space:normal;
-    background-color: #fff;
     background-image: none;
 }
 
 /* labels on the button */
 .multiSelect .buttonLabel {
-    display: inline-block;
     padding: 0px 0px 0px 0px;
 }
 
 /* downward pointing arrow */
 .multiSelect .caret {
-    display: inline-block;
-    width: 0;
-    height: 0;
     margin: 0px 6px 1px 12px  !important;
-    vertical-align: middle;
-    border-top: 4px solid #333;
-    border-right: 4px solid transparent;
-    border-left: 4px solid transparent;
-    border-bottom: 0 dotted;
 }
 
 
