Vis: Fragment Sankey: comment out move node behavior (#178)

--- a/app/components/sankey/sankey.css
+++ b/app/components/sankey/sankey.css
@@ -19,7 +19,7 @@ sankey-diagram .link:hover {
 }
 
 sankey-diagram .node rect {
-    cursor: move;
+    /*cursor: move;*/
     shape-rendering: crispEdges;
     opacity: 1;
     stroke-width:2;
