Param Grid: replace validation icon with Copy/Delete button and background color (#14)

--- a/app/app.css
+++ b/app/app.css
@@ -99,6 +99,14 @@
     font-size: 12px;
 }
 
+.gridStyle .has-success {
+    background-color: #dff0d8;
+}
+
+.gridStyle .has-error {
+    background-color: #f2dede;
+}
+
 .cellIcon {
     text-align: center;
     line-height: 30px;
