Info: fix font size (#20)

--- a/app/app.css
+++ b/app/app.css
@@ -191,6 +191,10 @@ info .glyphicon {
     color: #31b0d5;
 }
 
+info {
+    font-size: 12px;
+}
+
 /* Disable ng-grid scroll bars */
 
 .ngViewport{
